# selfoss-discord

./: .env  .gitignore  Cargo.toml  README.md  requirements.txt  selfoss.py
.github/workflows/: build.yaml  mypy.yaml  tag.yaml
src/: config.rs  main.rs  utils.rs
src/assets/: discord_create_channel_mock_response.json  discord_items_mock_response.json  discord_ratelimit_mock_response.json  discord_send_message_mock_response.json  selfoss_mock_response.json
src/discord/: adapter.rs  errors.rs  middleware.rs  mod.rs  models.rs
src/selfoss/: adapter.rs  models.rs
