[package]
name = "selfoss-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18.1"
reqwest-middleware = "0.2.0"
async-trait = "0.1"
task-local-extensions = "0.1"

[dev-dependencies]
httpmock = "0.6.8"
